# projeto-estudio-pilates

./: .gitignore  AGENTS.md  README.md  Tela_modalidades.html  agenteUX.md  cadastrar_colaborador.html  dashboard_admMaster.html  dashboard_adm_master.html  detalhes_alunos.html  detalhes_coloaboradores.html  detalhes_de_aula.html  editar_perfil_aluno.html  get_aulas_agendadas.html  install_tools.py  listas_de_aulas.html  marcar_aula.html  menu_habumger.html  meu_perfil.html  package-lock.json  pyproject.toml  relatorio_rotas_post.md  schema.yaml  tela_apos_clicar_em_configuracao.html  tela_cadastrar_usuario.html  tela_cadastrar_usuario_aluno.html  tela_gerenciar_aluno.html
backend/: .env.example  .gitignore  GEMINI.md  README.md  limpar_migrations.py  pyproject.toml  relatório_testes.txt  requirements.txt
backend/agendamentos/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/agendamentos/migrations/: 0001_initial.py  0002_aula_instrutor_principal_aula_instrutor_substituto_and_more.py  0002_creditoaula_aulaaluno_credito_utilizado.py  0002_initial.py  0003_alter_aula_options_alter_aulaaluno_options_and_more.py  0003_alter_notificacao_usuario.py  0003_creditoaula_matricula_origem.py
backend/alunos/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/alunos/migrations/: 0001_initial.py  0002_alter_aluno_foto.py  0002_aluno_unidades.py  0003_remove_aluno_cpf_alter_aluno_contato_and_more.py
backend/alunos/repositories/: alunos_repository.py  base_repository.py
backend/autenticacao/: apps.py  auth_backends.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/autenticacao/migrations/: 0001_initial.py  0002_delete_usuario.py
backend/avaliacoes/: controllers.py  forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/avaliacoes/migrations/: 0001_initial.py  0002_avaliacao_studio.py  0002_initial.py  0003_alter_avaliacao_instrutor.py  0004_alter_avaliacao_options_and_more.py
backend/bd/: config.py  create_schema.py
backend/colaborador/: apps.py  models.py  serializers.py  urls.py  views.py
backend/colaborador/migrations/: 0001_initial.py  0002_alter_colaborador_cargo_and_more.py
backend/config/: settings.py  urls.py
backend/core/: permissions.py  serializers.py  urls.py  views.py
backend/financeiro/: admin.py  apps.py  configtest.py  models.py  permissions.py  serializers.py  signals.py  test_integration_venda.py  test_permissions.py  test_serializers.py  test_views.py  tests.py  urls.py  views.py
backend/financeiro/migrations/: 0001_initial.py  0002_alter_matricula_options_alter_pagamento_options_and_more.py  0002_initial.py  0003_remove_produto_quantidade_estoque_matricula_studio_and_more.py  0004_alter_matricula_studio_alter_venda_studio.py  0005_alter_matricula_studio_alter_venda_studio.py  0006_alter_matricula_studio_alter_venda_studio.py  0007_alter_estoquestudio_produto_and_more.py  0008_venda_valor_total.py  0009_historicalestoquestudio_historicalmatricula_and_more.py
backend/notifications/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/notifications/migrations/: 0001_initial.py
backend/relatorios/: serializers.py  urls.py  views.py
backend/studios/: __init__.py  admin.py  apps.py  controllers.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/studios/migrations/: 0001_initial.py  0002_initial.py  0003_alter_colaboradorstudio_colaborador.py  0003_alter_studio_options.py  0003_migrate_old_unidades_data.py  0004_funcaooperacional.py  0005_populate_funcoes_operacionais.py  0006_colaboradorstudio_permissao_fk.py  0007_transfer_permissao_data.py  0008_remove_colaboradorstudio_permissao_fk_and_more.py  0009_mapear_funcoes_operacionais.py  0010_alter_colaboradorstudio_unique_together.py  0011_standardize_funcoes_operacionais.py
backend/usuarios/: admin.py  apps.py  auth_backends.py  forms.py  models.py  permissions.py  serializers.py  test_api_login.py  urls.py  views.py
backend/usuarios/migrations/: 0001_initial.py  0002_alter_colaborador_registro_profissional.py  0002_alter_colaborador_usuario_alter_usuario_groups_and_more.py  0002_alter_usuario_groups_alter_usuario_user_permissions.py  0002_remove_colaborador_cpf_usuario_cpf.py  0003_perfil_remove_colaborador_perfil_colaborador_perfis.py  0004_populate_perfis.py  0005_remove_colaborador_unidades_colaborador_unidades_old_and_more.py  (+12 more)
teste/: README.md  pyproject.toml
teste/config/: asgi.py  settings.py  urls.py  wsgi.py
teste/usuarios/: forms.py  models.py  urls.py  views.py
(+242 files in other folders)
