 #19-cadastro-colaborador
# backend/pyproject.toml

[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["wellingtonspdev <dihhhd71@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
django = ">=5.2.6,<6.0.0"
djangorestframework = ">=3.16.1,<4.0.0"
mysqlclient = ">=2.2.7,<3.0.0"
python-decouple = ">=3.8,<4.0"
djangorestframework-simplejwt = "^5.3.1"


[tool.poetry.group.dev.dependencies]
black = ">=25.9.0,<26.0.0"
ruff = ">=0.13.1,<0.14.0"
pytest = "^8.2.0"
pytest-django = "^4.8.0"

[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend para o sistema Define Pilates"
authors = ["Pilates"]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10"
# As dependências serão adicionadas aqui pelo comando 'poetry add'
django = "^5.2.6"
djangorestframework = "^3.16.1"
mysqlclient = "^2.2.7"
python-decouple = "^3.8"
drf-spectacular = "^0.28.0"

[tool.poetry.group.dev.dependencies]
# As dependências de desenvolvimento serão adicionadas aqui
black = "^25.9.0"
ruff = "^0.13.2"

 #19-cadastro-colaborador

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

